--- a/packages/cli-config/Cargo.toml
+++ b/packages/cli-config/Cargo.toml
@@ -16,6 +16,7 @@ toml = { version = "0.5.8", optional = true }
 cargo_toml = { version = "0.16.0", optional = true }
 once_cell = "1.18.0"
 tracing.workspace = true
+cargo-lock = { version = "9.0.0", optional = true }
 
 # bundling
 tauri-bundler = { version = "=1.4.0", features = ["native-tls-vendored"], optional = true }
@@ -23,4 +24,4 @@ tauri-utils = { version = "=1.5.*", optional = true }
 
 [features]
 default = []
-cli = ["tauri-bundler", "tauri-utils", "clap", "toml", "cargo_toml"]
+cli = ["tauri-bundler", "tauri-utils", "clap", "toml", "cargo_toml", "cargo-lock"]
