--- a/packages/cli-opt/Cargo.toml
+++ b/packages/cli-opt/Cargo.toml
@@ -11,6 +11,7 @@ keywords = ["dom", "ui", "gui", "react"]
 
 [dependencies]
 anyhow = { workspace = true }
+manganis = { workspace = true }
 manganis-core = { workspace = true }
 object = {version="0.36.0", features=["wasm"]}
 serde = { workspace = true, features = ["derive"] }
