Support `concat!` and other macros in asset path (#3809)

--- a/packages/manganis/manganis-macro/Cargo.toml
+++ b/packages/manganis/manganis-macro/Cargo.toml
@@ -20,6 +20,7 @@ quote = { workspace = true }
 syn = { workspace = true, features = ["full", "extra-traits"] }
 manganis-core = { workspace = true }
 dunce = { workspace = true }
+macro-string = { workspace = true }
 
 [features]
 default = []
