--- a/Cargo.toml
+++ b/Cargo.toml
@@ -245,6 +245,7 @@ async-once-cell = { version = "0.5.3" }
 rayon = "1.2.0"
 wasmparser = "0.225.0"
 itertools = "0.14.0"
+macro-string = "0.1.3"
 
 # desktop
 wry = { version = "0.45.0", default-features = false }
