--- a/packages/cli/assets/dioxus.toml
+++ b/packages/cli/assets/dioxus.toml
@@ -1,21 +1,10 @@
 [application]
 
-# dioxus project name
-name = "{{project-name}}"
-
-# default platform
-# you can also use `dx serve/build --platform XXX` to use other platform
-# value: web | desktop
-default_platform = "{{default-platform}}"
-
 # Web `build` & `serve` dist path
 out_dir = "dist"
 
 # resource (static) file folder
 asset_dir = "public"
-
-# hot reload by default
-hot_reload = true
 
 [web.wasm_opt]
 # The level wasm-opt should target. z is the smallest. 4 is the fastest.
@@ -32,7 +21,7 @@ index_on_404 = true
 
 watch_path = ["src", "examples"]
 
-[bundler]
+[bundle]
 # Bundle identifier
 identifier = "io.github.{{project-name}}"
 
