Rename wgpu child window example for discoverability (#3837)
* rename wgpu child window example

* rename child window example in Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -515,7 +515,7 @@ required-features = ["desktop"]
 doc-scrape-examples = true
 
 [[example]]
-name = "wgpu"
+name = "wgpu_child_window"
 required-features = ["desktop", "gpu"]
 
 [[example]]
