--- a/packages/router/Cargo.toml
+++ b/packages/router/Cargo.toml
@@ -13,6 +13,7 @@ keywords = ["dom", "ui", "gui", "react", "wasm"]
 dioxus-lib = { workspace = true }
 dioxus-history = { workspace = true }
 dioxus-router-macro = { workspace = true }
+dioxus-fullstack-hooks = { workspace = true, optional = true }
 tracing = { workspace = true }
 urlencoding = "2.1.3"
 url = "2.3.1"
@@ -21,6 +22,7 @@ rustversion = "1.0.17"
 
 [features]
 default = []
+streaming = ["dep:dioxus-fullstack-hooks"]
 wasm-split = []
 
 [dev-dependencies]
