--- a/packages/isrg/Cargo.toml
+++ b/packages/isrg/Cargo.toml
@@ -16,3 +16,4 @@ thiserror = { workspace = true }
 rustc-hash = { workspace = true }
 lru  = { workspace = true }
 tracing = { workspace = true }
+walkdir = { workspace = true }
