--- a/packages/desktop/Cargo.toml
+++ b/packages/desktop/Cargo.toml
@@ -20,6 +20,7 @@ dioxus-document = { workspace = true }
 dioxus-signals = { workspace = true, optional = true }
 dioxus-interpreter-js = { workspace = true, features = ["binary-protocol", "serialize"] }
 dioxus-cli-config = { workspace = true }
+dioxus-asset-resolver = { workspace = true }
 generational-box = { workspace = true }
 # hotreload only works on desktop platforms.... mobile is still wip
 dioxus-devtools = { workspace = true, optional = true }
@@ -44,13 +45,13 @@ tokio = { workspace = true, features = [
     "io-util",
 ], optional = true }
 webbrowser = "0.8.0"
-infer = "0.11.0"
+infer = { workspace = true }
 dunce = { workspace = true }
 slab = { workspace = true }
 rustc-hash = { workspace = true }
 dioxus-hooks = { workspace = true }
 futures-util = { workspace = true }
-urlencoding = "2.1.2"
+urlencoding = { workspace = true }
 async-trait = "0.1.68"
 tao = { workspace = true, features = ["rwh_05"] }
 once_cell = { workspace = true }
