--- a/packages/router/Cargo.toml
+++ b/packages/router/Cargo.toml
@@ -15,10 +15,10 @@ dioxus-history = { workspace = true }
 dioxus-router-macro = { workspace = true }
 dioxus-fullstack-hooks = { workspace = true, optional = true }
 tracing = { workspace = true }
-urlencoding = "2.1.3"
-url = "2.3.1"
+urlencoding = { workspace = true }
+url = { workspace = true }
 dioxus-cli-config = { workspace = true }
-rustversion = "1.0.17"
+rustversion = { workspace = true }
 
 [features]
 default = []
